<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Minirobots</string>
    <string name="take_picture_title">Welcome!</string>
    <string name="take_picture_button">Take picture</string>
    <string name="take_picture_get_from_gallery_button">Get picture from gallery</string>
    <string name="instructions_list_title">The following instructions will be sent to the robot: </string>
    <string name="instructions_list_function_not_stored_error">There are not stored functions. Please, send a function to store it, or remove the function instruction.</string>
    <string name="instructions_list_function_has_been_stored">The function has been stored.</string>
    <string name="instructions_screen_send_instructions_button_text">Send instructions</string>
    <string name="add_instruction_title">Choose an instruction to add: </string>
    <string name="instructions_list_add_instruction_button">Add instruction</string>
    <string name="instructions_list_send_program_button">Send program</string>
    <string name="instructions_list_store_function_button">Store function</string>
    <string name="edit_instruction_title">Choose an instruction to edit: </string>
    <string name="send_instructions_loading_title">Sending instructions to the robot</string>
    <string name="send_instructions_error_title">There was an error sending the instructions</string>
    <string name="send_instructions_invalid_program_title">Invalid program</string>
    <string name="instructions_list_invalid_program_error">Please, verify that the program starts and ends with the correct instructions</string>
    <string name="instructions_list_empty_program_error">Add instructions to the program to send them to the robot</string>
    <string name="send_instructions_invalid_program_subtitle">Please, verify that the program starts and ends with the correct instructions</string>
    <string name="send_instructions_success_title">The instructions were sent successfully!</string>
    <string name="send_instructions_error_retry">Retry</string>
    <string name="send_instructions_invalid_program_button">Go back</string>
    <string name="send_instructions_success_button">Start again</string>
    <string name="take_picture_subtitle">Let\'s get a picture to search for instructions</string>
</resources>
